# statistics-canada

./: pyproject.toml
src/: main.py  statcan_client.py
src/ingest/: cubes.py  economic_indicators.py
src/transforms/: cubes.py  economic_indicators.py
src/transforms/economic_indicators/: main.py  test.py
src/utils/: __init__.py  statcan_client.py
